Fri Dec  8 17:14:09 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Oops - removed one too many #include "autoptr.h"

Fri Dec 08 16:50:42 GMT 2000 Olly Betts

	* Updated TODO.

Fri Dec  8 16:44:26 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* IndexerBuilder now returns OmIndexer objects instead of
	  AutoPtr<OmIndexer>.  OmIndexer's internals are reference
	  counted.
	
	* Moved autoptr.h from include/om to common/, since it's no
	  longer used in the API.

Fri Dec  8 16:22:48 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed omstemmer node bug and made debug slightly more verbose
	  in indextest.cc.

Fri Dec  8 16:13:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test for OmIndexerMessage to indextest

	* Added output operator for OmIndexerMessage

	* Fixed a bug introduced into omvectorsplit node

	* Changed couts in indextest.cc to touts.

Fri Dec 08 14:53:24 GMT 2000 Olly Betts

	* quartztest: removed OmDocumentTerm reference so that it'll
	  compile (tests fail though).

Fri Dec  8 14:42:46 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmIndexerMessage is now a class by itself, replacing OmIndexerData
	  and the typedef to AutoPtr<OmindexerData>.  It's now a copy-on-write
	  object.

	* The indexer stuff all changed.

Fri Dec 08 14:24:02 GMT 2000 Olly Betts

	* omindexdoc.{cc,h}: no longer used so removed.

	* Pushed OmDocumentTerm from API level into the internals of the
	  library.

	* Updated TODO.

Fri Dec 08 12:08:49 GMT 2000 Olly Betts

	* delve: if just given a database (or list of databases), report the
	  number of documents and average document length.

Thu Dec  7 20:39:24 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug: Om*Iterators which were created over empty lists didn't
	  have null internals, causing them not to compare equal to end
	  iterators.

	* Added many asserts to iterator code.
